force-app/main/default/objects/Booking__c/fields/student_Name__c.field-meta.xml
<CustomField>
    <fullName>student_Name__c</fullName>
    <formula>Student__r.FirstName &amp;&apos; &apos; &amp; Student__r.LastName</formula>
    <label>student Name</label>
    <type>Text</type>
</CustomField>