force-app/main/default/objects/Booking__c/fields/Studio_Booking_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Studio_Booking_Invoice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Studio Booking Invoice Number</description>
    <label>Studio Booking Invoice Number</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>