force-app/main/default/objects/Booking__c/fields/Teacher_Email__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Email__c</fullName>
    <label>Teacher Email</label>
    <type>Email</type>
</CustomField>