force-app/main/default/objects/Booking__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <formula>Teacher_Account__r.FirstName +&apos; &apos;+Teacher_Account__r.LastName</formula>
    <label>Teacher Name</label>
    <type>Text</type>
</CustomField>