force-app/main/default/objects/Booking__c/fields/Trail_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Trail_Date_Range__c</fullName>
    <formula>IF( Days_Count__c = 0, &quot;Today&quot;,  IF( AND(Days_Count__c &gt; 0,Days_Count__c &lt;= 3), &quot;3 Days&quot;, IF( AND(Days_Count__c &gt; 3,Days_Count__c &lt;= 7), &quot;7 Days&quot;, IF( AND(Days_Count__c &gt; 7,Days_Count__c &lt;= 30), &quot;30 Days&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trail Date Range</label>
    <type>Text</type>
</CustomField>