force-app/main/default/objects/Booking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Make-up</fullName>
            </value>
            <value>
                <fullName>Audition</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Group Class</fullName>
            </value>
            <value>
                <fullName>Group Lesson</fullName>
            </value>
            <value>
                <fullName>Piano Viewing</fullName>
            </value>
            <value>
                <fullName>Busy / Place holder</fullName>
                <isActive>false</isActive>
                <label>Busy / Place holder</label>
            </value>
            <value>
                <fullName>Notice</fullName>
                <isActive>false</isActive>
                <label>Notice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>