force-app/main/default/objects/Booking__c/recordTypes/Camp_Lesson.recordType-meta.xml
<RecordType>
    <fullName>Camp_Lesson</fullName>
    <active>true</active>
    <description>this  Record Type for show Camp lesson fields</description>
    <label>Camp Lesson</label>
</RecordType>