force-app/main/default/objects/Booking__c/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>Select this record type to create facility booking</description>
    <label>Facility</label>
</RecordType>