force-app/main/default/objects/Booking__c/recordTypes/Group_Class.recordType-meta.xml
<RecordType>
    <fullName>Group_Class</fullName>
    <active>true</active>
    <description>Select this record type to create Group Class Bookings</description>
    <label>Group Class</label>
</RecordType>