force-app/main/default/objects/Booking__c/recordTypes/Group_Lesson.recordType-meta.xml
<RecordType>
    <fullName>Group_Lesson</fullName>
    <active>true</active>
    <description>Select this record type to create Group Lessons Bookings</description>
    <label>Group Lesson</label>
</RecordType>