force-app/main/default/objects/Booking__c/recordTypes/Lesson.recordType-meta.xml
<RecordType>
    <fullName>Lesson</fullName>
    <active>true</active>
    <description>Select this record type to create lesson booking</description>
    <label>Lesson</label>
</RecordType>