force-app/main/default/objects/Booking__c/listViews/All_Group_Lesson.listView-meta.xml
<ListView>
    <fullName>All_Group_Lesson</fullName>
    <columns>NAME</columns>
    <columns>Center_Name__c</columns>
    <columns>Teacher_Account__c</columns>
    <columns>Student__c</columns>
    <columns>Group_Class__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Booking__c.Group_Lesson</value>
    </filters>
    <label>All Group Lesson</label>
</ListView>