force-app/main/default/objects/Booking__c/listViews/All_Reschedule_Booking.listView-meta.xml
<ListView>
    <fullName>All_Reschedule_Booking</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Center__c</columns>
    <columns>Teacher_Account__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Booking__c.Lesson</value>
    </filters>
    <filters>
        <field>Is_Reschedule_Booking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Reschedule Booking</label>
</ListView>