force-app/main/default/objects/Booking__c/listViews/Group_Class.listView-meta.xml
<ListView>
    <fullName>Group_Class</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Class__c</columns>
    <columns>Teacher_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>notEqual</operation>
        <value>Null</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Booking__c.Group_Class</value>
    </filters>
    <label>All Group Classes</label>
</ListView>